commit del avance primer entregable

--- a/main.tex
+++ b/main.tex
@@ -40,7 +40,7 @@ Universidad de Chile, Santiago, Chile}
 
 \author{Fabián Lema}
 \affiliation{}
-\email{fabian.lema@ing.uchile.cl}
+\email{fabian.lema@ug.uchile.cl}
 
 \author{Francisco Muñoz}
 \affiliation{}
