Avance tercer entregable

--- a/sample.bib
+++ b/sample.bib
@@ -991,14 +991,72 @@ year = {2003},
  address = {Austin, TX, USA},
  }
 
+@inproceedings{
+     title={{FORECAST-CLSTM}: A New Convolutional LSTM network for Cloudage Nowcasting},
+     author={Tan, Chao and Feng, Xin and Long, Jianwu and Geng, Li},
+     booktitle={VCIP},
+     year={2018},
+     note={to appear},
+}
 
+%FORECAST LSTM ############################################################################
+@article{Forecast_LSTM,
+author = {Hochreiter, Sepp and Schmidhuber, Jürgen},
+year = {1997},
+month = {12},
+pages = {1735-80},
+title = {Long Short-term Memory},
+volume = {9},
+journal = {Neural computation},
+doi = {10.1162/neco.1997.9.8.1735}
+}
 
+% RESNET ###################################################################################
+@ARTICLE{Resnet,
+       author = {{He}, Kaiming and {Zhang}, Xiangyu and {Ren}, Shaoqing and {Sun}, Jian},
+        title = "{Deep Residual Learning for Image Recognition}",
+      journal = {arXiv e-prints},
+     keywords = {Computer Science - Computer Vision and Pattern Recognition},
+         year = 2015,
+        month = dec,
+          eid = {arXiv:1512.03385},
+        pages = {arXiv:1512.03385},
+archivePrefix = {arXiv},
+       eprint = {1512.03385},
+ primaryClass = {cs.CV},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015arXiv151203385H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
-@BOOK{book-minimal,
-   author = "Donald E. Knuth",
-   title = "Seminumerical Algorithms",
-   publisher = "Addison-Wesley",
-   year = "1981",
+% LSTM ###################################################################################
+@article{LSTM,
+author = {Hochreiter, Sepp and Schmidhuber, Jürgen},
+year = {1997},
+month = {12},
+pages = {1735-80},
+title = {Long Short-term Memory},
+volume = {9},
+journal = {Neural computation},
+doi = {10.1162/neco.1997.9.8.1735}
+}
+
+% Attention ############################################################################
+@ARTICLE{Atention,
+       author = {{Vaswani}, Ashish and {Shazeer}, Noam and {Parmar}, Niki and
+         {Uszkoreit}, Jakob and {Jones}, Llion and {Gomez}, Aidan N. and
+         {Kaiser}, Lukasz and {Polosukhin}, Illia},
+        title = "{Attention Is All You Need}",
+      journal = {arXiv e-prints},
+     keywords = {Computer Science - Computation and Language, Computer Science - Machine Learning},
+         year = 2017,
+        month = jun,
+          eid = {arXiv:1706.03762},
+        pages = {arXiv:1706.03762},
+archivePrefix = {arXiv},
+       eprint = {1706.03762},
+ primaryClass = {cs.CL},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017arXiv170603762V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 % incollection (has an editor, title, and possibly a booktitle)
@@ -1765,4 +1823,26 @@ pages = "24--31"}
   issue={3},
   pages={21--45},
   year={2006},
+}
+
+@article{abedini2019,
+  title={A comparative study of support vector machine and logistic model tree classifiers for shallow landslide susceptibility modeling},
+  author={Abedini, Mousa and Ghasemian, Bahareh and Shirzadi, Ataollah and Bui, Dieu Tien},
+  journal={Environmental Earth Sciences},
+  volume={78},
+  number={18},
+  pages={560},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{pourghasemi2013,
+  title={A comparative assessment of prediction capabilities of Dempster--Shafer and weights-of-evidence models in landslide susceptibility mapping using GIS},
+  author={Pourghasemi, HamidReza and Pradhan, Biswajeet and Gokceoglu, Candan and Moezzi, Kimia Deylami},
+  journal={Geomatics, Natural Hazards and Risk},
+  volume={4},
+  number={2},
+  pages={93--118},
+  year={2013},
+  publisher={Taylor \& Francis}
 }
