--- a/template.tex
+++ b/template.tex
@@ -4,6 +4,8 @@
 
 \documentclass[sigconf, nonacm]{acmart}
 
+\usepackage{lipsum}
+
 %% The following content must be adapted for the final version
 % paper-specific
 \newcommand\vldbdoi{XX.XX/XXX.XX}
